game-javac.err
src\game\GameController.java:191: error: constructor GameServer in class GameServer cannot be applied to given types;
							server = new GameServer(portNum, view.logTextArea);
							         ^
  required: no arguments
  found: int,JTextArea
  reason: actual and formal argument lists differ in length
src\game\GameController.java:211: error: cannot find symbol
				server.disconnectServer();
				      ^
  symbol:   method disconnectServer()
  location: variable server of type GameServer
src\game\GameController.java:222: error: cannot find symbol
				server.endConnections();
				      ^
  symbol:   method endConnections()
  location: variable server of type GameServer
src\game\GameController.java:231: error: cannot find symbol
				server.printLeaderboard();
				      ^
  symbol:   method printLeaderboard()
  location: variable server of type GameServer
4 errors
